# wayland-displays

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  USECASES.md  cli.cpp  flake.nix  flake.old.nix  gui.cpp  main.c  meson.build  package.nix
cmake/: FindCairo.cmake  FindEGL.cmake  FindGTK3.cmake  FindLibEpoxy.cmake  FindWayland.cmake  FindWaylandScanner.cmake
examples/: wayland-displays.yml
headers/: wayland.dev  wlroots
headers/wlr-output-management-unstable-v1/: public-code.c  server-header.c
lib/: CMakeLists.txt  meson.build
lib/argparse/: Argument.cpp  ArgumentParser.cpp  Namespace.cpp  README.md  argparse.h  meson.build
lib/togglegroup/: meson.build  togglegroup.cpp  togglegroup.hpp
protocols/: meson.build
resources/: layout.ui  meson.build  resources.xml
src/: CMakeLists.txt  canvas.cpp  config.cpp  display.cpp  display.hpp  experiment.cpp  main.cpp  meson.build  sandbox.cpp  stb_image.h  wlr-output.cpp  wlr_output.cpp
src/common/: fixed24_8.hpp  ipc.cpp  ipc.hpp  ipc_request.hpp  logger.cpp  logger.hpp  paths.hpp  shapes.cpp  shapes.hpp  socket.cpp  socket.hpp  time.hpp
src/common/ipc/: base.hpp  get.hpp  set.hpp  switch.hpp  union.hpp
src/ctl/: ctl.cpp
src/gui/: box.hpp  canvas.cpp  canvas.hpp  copy.cpp  copy.hpp  details.cpp  details.hpp  fs.glsl  glarea.cpp  glarea.fs.glsl  glarea.hpp  glarea.vs.glsl  gui.cpp  gui.hpp  screencopy.cpp  screencopy.hpp  vs.glsl
src/outputs/: config.cpp  config.hpp  head.cpp  head.hpp  mode.cpp  outputs.cpp  outputs.hpp  shapes.hpp
src/sandbox/: sandbox.cpp
src/server/: ipc.cpp  server.cpp
src/server/handlers/: ArrangeRowHandler.cpp  BaseHandler.cpp  DefaultHandler.cpp  WayDisplaysHandler.cpp
src/server/handlers/WayDisplaysHandler/: WayDisplaysHandler.cpp  shapes.cpp  utils.cpp  utils.hpp
src/utils/: fixed24_8.cpp  fixed24_8.hpp  ipc.cpp  paths.cpp  paths.hpp  socket.cpp  time.cpp
src/wlr_output/: head.cpp  head.hpp  mode.cpp  mode.hpp  shapes.hpp
tests/: CMakeLists.txt  debug-host-module.nix  test.nix
tests/server/handlers/WayDisplaysHandler/: test_find_displays.cpp
tests/unit/server/handlers/WayDisplaysHandler/: test_find_displays.cpp
tests/vm/: debug-host-module.nix  machines.py  test.nix
